--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <img src="assets/imgs/about-us.jpg" alt="About Mtendere Education Consult" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
-                    <h2 class="display-5 fw-bold mb-3">About Mtendere Education Consult</h2>
+                    <h2 class="fw-bold mb-3">About Mtendere Education Consult</h2>
                     <p class="lead mb-4">We are a registered organization under the Malawi Government Business Registration Act (No 12 of 2012), dedicated to connecting aspiring students with prestigious international universities and colleges.</p>
                     <ul class="list-unstyled">
                         <li class="mb-2"><i class="bi bi-check-circle-fill text-primary me-2"></i>Expert guidance for international education</li>
@@ -421,6 +421,8 @@
                 </div>
             </div>
 
+            
+
             <!-- Course Item 4 -->
             <div class="item">
                 <div class="custom-media border rounded shadow-sm p-3 bg-white">
@@ -463,6 +465,135 @@
             </div>
         </div>
     </div>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="py-5">
+        <div class="container">
+            <h2 class="display-5 fw-bold text-center mb-5" data-aos="fade-up">Student Success Stories</h2>
+            <div class="row">
+                <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="card h-100 shadow">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                            </div>
+                            <p class="card-text">"Mtendere Education Consult made my dream of studying abroad a reality. Their guidance throughout the application process was invaluable."</p>
+                            <div class="d-flex align-items-center mt-3">
+                                <img src="assets/imgs/testimonial-1.jpg" alt="Caroline Tembo" class="rounded-circle me-3" width="60">
+                                <div>
+                                    <h5 class="mb-0">Caroline Tembo</h5>
+                                    <small class="text-muted">Hons Degree in Commerce - PCTE India</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="card h-100 shadow">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                            </div>
+                            <p class="card-text">"The team at Mtendere went above and beyond to help me secure a scholarship. I'm now pursuing my passion for nutrition at a top university."</p>
+                            <div class="d-flex align-items-center mt-3">
+                                <img src="assets/imgs/testimonial-2.jpg" alt="Janet Kandulu" class="rounded-circle me-3" width="60">
+                                <div>
+                                    <h5 class="mb-0">Janet Kandulu</h5>
+                                    <small class="text-muted">BSc Nutrition and Dietetics - Chandigarh</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="card h-100 shadow">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                            </div>
+                            <p class="card-text">"Thanks to Mtendere's support, I'm now studying Cybersecurity abroad. Their expertise made the complex application process smooth and stress-free."</p>
+                            <div class="d-flex align-items-center mt-3">
+                                <img src="assets/imgs/testimonial-3.jpg" alt="Trust Chikondi Mangani" class="rounded-circle me-3" width="60">
+                                <div>
+                                    <h5 class="mb-0">Trust Chikondi Mangani</h5>
+                                    <small class="text-muted">BSc Cybersecurity - 2023</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured Scholarships Section -->
+    <section id="featured-scholarships" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="display-5 fw-bold text-center mb-5" data-aos="fade-up">Featured Scholarships</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="card h-100 shadow-sm">
+                        <img src="assets/imgs/scholarship-1.jpg" class="card-img-top" alt="MBBS Scholarship">
+                        <div class="card-body">
+                            <h5 class="card-title">MBBS Scholarship</h5>
+                            <p class="card-text">Full scholarship for medical studies in top Indian universities.</p>
+                            <ul class="list-unstyled">
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Full tuition coverage</li>
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Monthly stipend</li>
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Accommodation included</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="card h-100 shadow-sm">
+                        <img src="assets/imgs/scholarship-2.jpg" class="card-img-top" alt="Engineering Excellence Scholarship">
+                        <div class="card-body">
+                            <h5 class="card-title">Engineering Excellence Scholarship</h5>
+                            <p class="card-text">50% tuition waiver for engineering programs in Malaysia.</p>
+                            <ul class="list-unstyled">
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>50% tuition waiver</li>
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Internship opportunities</li>
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Research grants available</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="card h-100 shadow-sm">
+                        <img src="assets/imgs/scholarship-3.jpg" class="card-img-top" alt="Business Leadership Program">
+                        <div class="card-body">
+                            <h5 class="card-title">Business Leadership Program</h5>
+                            <p class="card-text">Full ride for MBA studies in the United States.</p>
+                            <ul class="list-unstyled">
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Full tuition coverage</li>
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Living expenses covered</li>
+                                <li><i class="bi bi-check-circle-fill text-success me-2"></i>Mentorship program</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <a href="scholarships.html" class="btn btn-primary btn-lg">View All Scholarships</a>
+            </div>
+        </div>
+    </section>
 
     <div class="why-choose sticky-section"
         style="background-image: url('assets/imgs/Background/mtendere.jpg'); text-align: center; justify-content: center;">
@@ -1159,71 +1290,7 @@
         </div>
     </div>
 
-    <div class="testimonial-section" id="testimonial">
-        <div class="container">
-            <div class="section-header text-center mb-5">
-                <h6 class="text-primary fw-bold">Testimonial</h6>
-                <h1 class="display-5"><span class="text-primary">What Our Students Say?</span></h1>
-                <p class="lead">Our students have come to rely on us for their international education needs.</p>
-            </div>
-            <div class="row carousel-slide justify-content-center">
-                <div class="col-lg-10">
-                    <!-- Owl Carousel Container -->
-                    <div class="inner-Carousel testimonial-carousel">
-
-                        <!-- Testimonial 1 -->
-                        <div class="carousel-item">
-                            <blockquote class="block-testimonial text-center">
-                                <p class="text-lg font-medium text-gray-600">
-                                    &ldquo;Mtendere Education Consult’s personalized approach made all the
-                                    difference...&rdquo;
-                                </p>
-                                <div class="author mt-4">
-                                    <img src="assets/imgs/students/Edina.jpg" alt="Student 1"
-                                        class="rounded-full w-16 h-16 mx-auto">
-                                    <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
-                                    <p class="position text-gray-500">Engineering Student, University of Toronto</p>
-                                </div>
-                            </blockquote>
-                        </div>
-
-                        <!-- Testimonial 2 -->
-                        <div class="item">
-                            <blockquote class="block-testimonial text-center">
-                                <p class="text-lg font-medium text-gray-600">
-                                    &ldquo;The guidance from Mtendere helped me get my scholarship in the UK!...&rdquo;
-                                </p>
-                                <div class="author mt-4">
-                                    <img src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="Student 2"
-                                        class="rounded-full w-16 h-16 mx-auto">
-                                    <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
-                                    <p class="position text-gray-500">Law Student, University of Manchester</p>
-                                </div>
-                            </blockquote>
-                        </div>
-
-                        <!-- Testimonial 3 -->
-                        <div class="item">
-                            <blockquote class="block-testimonial text-center">
-                                <p class="text-lg font-medium text-gray-600">
-                                    &ldquo;Thanks to Mtendere, I could pursue my dream of studying abroad...&rdquo;
-                                </p>
-                                <div class="author mt-4">
-                                    <img src="assets/imgs/students/JanetKandulu.jpg" alt="Student 3"
-                                        class="rounded-full w-16 h-16 mx-auto">
-                                    <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
-                                    <p class="position text-gray-500">Product Designer, University of California</p>
-                                </div>
-                            </blockquote>
-                        </div>
-                        <!-- Add more testimonials as needed -->
-                    </div>
-                    <!-- End Owl Carousel -->
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
     <div class="blog-section">
         <div class="container">
             <div class="section-header text-center mb-5">
