--- a/gallery.html
+++ b/gallery.html
@@ -28,8 +28,10 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Owl Carousel CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
 
     <!-- Owl Carousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
@@ -70,8 +72,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand" href="#">
-            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top"
-                alt="Mtendere Logo">
+            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top" alt="Mtendere Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
             aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -155,67 +156,95 @@
 
         </div>
     </div>
-
-    <section id="stories" class="container my-5">
-        <h2 class="text-center">Student Achievements & Stories</h2>
-        <div class="row">
-            <!-- Story Card 1 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="assets/imgs/students/IMG-20230913-WA0056.jpg" class="card-img-top" alt="Story Image 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Student Success: Jane Doe</h5>
-                        <p class="card-text">From Malawi to Canada - A success story of persistence and hard work.</p>
-                        <a href="#" class="btn btn-primary">Read Story</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Story Card 2 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="assets/imgs/IMG-20250324-WA0016.jpg" class="card-img-top" alt="Story Image 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Student Spotlight: John Smith</h5>
-                        <p class="card-text">John's journey from Malawi's high school to pursuing his master's in the
-                            UK.</p>
-                        <a href="#" class="btn btn-primary">Read Story</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Story Card 3 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="assets/imgs/team/IMG_2331.jpg" class="card-img-top" alt="Story Image 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Scholarship Recipient: Linda</h5>
-                        <p class="card-text">How Linda secured a full scholarship for an engineering program in the US.
-                        </p>
-                        <a href="#" class="btn btn-primary">Read Story</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Portfolio End -->
 
-    <!-- Gallery Start -->
-    <div class="untree_co-section">
-        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">Pictorial View</h6>
-            <h1 class="mb-5">Meet The Best Moments For Our Team</h1>
+    <div class="gallery-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-4 item">
+                    <a href="images/img-school-5-min.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
+                        data-aos="fade-up" data-aos-delay="0">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/IMG-20250321-WA0226.jpg">
+                    </a>
+                    <a href="images/img_1.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="0">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/graduates.jpg">
+                    </a>
+                    <a href="images/img_2.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="100">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/IMG-20250321-WA0411.jpg">
+                    </a>
+                    <a href="images/img_3.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="200">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/IMG-20250324-WA0027.jpg">
+                    </a>
+
+                </div>
+                <div class="col-md-6 col-lg-4 item">
+                    <a href="images/img-school-1-min.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
+                        data-aos="fade-up" data-aos-delay="0">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/Atsikana Paulendo Career Talks.jpg">
+                    </a>
+                    <a href="images/img_1.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="0">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/Background/doctors pose.jpg">
+                    </a>
+                    <a href="images/img_5.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="100">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs">
+                    </a>
+                    <a href="images/img_8.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="200">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/Blogs/Counscelling and Mentorship workshop 2022 Batch.jpg">
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-4 item">
+                    <a href="images/img-school-2-min.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
+                        data-aos="fade-up" data-aos-delay="0">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/Events/IMG-20221019-WA0074.jpg">
+                    </a>
+                    <a href="images/img_9.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="0">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/courses/IMG-20230620-WA0436.jpg">
+                    </a>
+                    <a href="images/img_6.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="100">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/IMG-20250321-WA0195.jpg">
+                    </a>
+                    <a href="images/img_7.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="200">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/Abroad students Malawi flag.jpg">
+                    </a>
+                    <a href="images/img_10.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                        data-aos-delay="0">
+                        <span class="icon-search2"></span>
+                        <img class="img-fluid" src="assets/imgs/Students on Campus with Branded Jerseys.jpg">
+                    </a>
+                </div>
+            </div>
         </div>
-        
+    </div>
+
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
-        <div class="container"> 
-            
+        <div class="container">
             <!-- ACCREDITATIONS -->
             <div class="text-center mb-4">
                 <h3 class="fw-semibold">Accreditations & Associations</h3>
                 <p class="text-muted">Trusted by renowned education bodies across the globe</p>
             </div>
-
             <div class="row justify-content-center align-items-center g-4">
                 <div class="col-4 col-sm-2">
                     <img src="assets/imgs/gedu-logo.png" alt="Accreditation 3" class="img-fluid grayscale-hover">
@@ -309,29 +338,26 @@
                     <div class="widget">
                         <h5 class="fw-bold">Gallery</h5>
                         <ul class="instafeed instagram-gallery list-unstyled">
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250324-WA0020.jpg" alt="team"
-                                        width="72" height="72"></a>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/IMG-20250324-WA0020.jpg" alt="team" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission"
-                                        width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/Internationalstudies.jpg"
-                                        alt="application" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/Events-3.jpg" alt="departure" width="72"
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission" width="72"
                                         height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0138.jpg"
-                                        alt="Scholarships" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/Event-1.jpg" alt="Branding" width="72"
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/Internationalstudies.jpg" alt="application" width="72"
                                         height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/Events-3.jpg" alt="departure" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/IMG-20250321-WA0138.jpg" alt="Scholarships" width="72"
+                                        height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/Event-1.jpg" alt="Branding" width="72" height="72"></a>
                             </li>
                         </ul>
                     </div> <!-- /.widget -->
